{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 23,
  "lineage": "cbacf5fb-8ec0-d6ea-54a1-54496998976d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:internet-gateway/igw-039deb9fd4c23e920",
            "id": "igw-039deb9fd4c23e920",
            "owner_id": "406214277529",
            "tags": {
              "Name": "acoes-no-bolso-igw"
            },
            "tags_all": {
              "Name": "acoes-no-bolso-igw"
            },
            "vpc_id": "vpc-09669196390a332a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:route-table/rtb-08e9040fed536c043",
            "id": "rtb-08e9040fed536c043",
            "owner_id": "406214277529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039deb9fd4c23e920",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acoes-no-bolso-rt"
            },
            "tags_all": {
              "Name": "acoes-no-bolso-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09669196390a332a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc1cd44f4b829b9",
            "route_table_id": "rtb-08e9040fed536c043",
            "subnet_id": "subnet-082a6b117d0c65fca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:subnet/subnet-082a6b117d0c65fca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082a6b117d0c65fca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406214277529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acoes-no-bolso-public-subnet"
            },
            "tags_all": {
              "Name": "acoes-no-bolso-public-subnet"
            },
            "vpc_id": "vpc-09669196390a332a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:vpc/vpc-09669196390a332a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00619a2295789a709",
            "default_route_table_id": "rtb-0c40dadcdcd727b8d",
            "default_security_group_id": "sg-015e9a6a0875ffb0d",
            "dhcp_options_id": "dopt-0e0eabe0ed9cb375a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09669196390a332a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c40dadcdcd727b8d",
            "owner_id": "406214277529",
            "tags": {
              "Name": "acoes-no-bolso-vpc"
            },
            "tags_all": {
              "Name": "acoes-no-bolso-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.app_server",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:vpc/vpc-09669196390a332a4",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c7a55ce31ea278d2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e0eabe0ed9cb375a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09669196390a332a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c40dadcdcd727b8d",
            "owner_id": "406214277529",
            "tags": {
              "Name": "acoes-no-bolso-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a3e9423ae4d7a19",
            "arn": "arn:aws:ec2:us-east-1:406214277529:instance/i-06050b76d578bf900",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06050b76d578bf900",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db6ca008e1e50f28",
            "private_dns": "ip-10-0-1-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-54-226-28-52.compute-1.amazonaws.com",
            "public_ip": "54.226.28.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03285532a65577adb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082a6b117d0c65fca",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "acoes-no-bolso-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "acoes-no-bolso-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-01b0b8bd51abcca51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "module.app_server.aws_security_group.app_sg",
            "module.app_server.data.aws_ami.ubuntu",
            "module.app_server.data.aws_subnets.default",
            "module.app_server.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.app_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406214277529:security-group/sg-01b0b8bd51abcca51",
            "description": "Security Group para a aplicacao Acoes no Bolso rodando no Docker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b0b8bd51abcca51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Aplicacao Web",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acoes-no-bolso-prod-sg20260921163742874600000002",
            "name_prefix": "acoes-no-bolso-prod-sg",
            "owner_id": "406214277529",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "acoes-no-bolso-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "acoes-no-bolso-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09669196390a332a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.app_server.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}